grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.ridjal.com
    http:
      paths:
      #- path: /
      - backend:
          serviceName: grafana
          servicePort: 3000
