portainer-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: portainer.ridjal.com
    http:
      paths:
      #- path: /
      - backend:
          serviceName: portainer
          servicePort: 80
