prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.ridjal.com
    http:
      paths:
      #- path: /
      - backend:
          serviceName: prometheus-server
          servicePort: 80
